--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,8 +24,14 @@ main {
 }
 
 .card{
+    opacity: 1;
     background-color: #fbfbfb;
     cursor: pointer;
+}
+
+
+.card:hover{
+    opacity: 0.75;
 }
 
 h3{
